# faux-v2

./: .env  .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.json
server/: .env  .env.example  Cargo.toml
server/migration/: Cargo.toml
server/migration/sql/: 001_init.sql
server/migration/src/: lib.rs  m20260205_000001_init.rs  m20260205_000002_relations.rs  m20260205_000003_add_credits.rs
server/src/: main.rs
server/src/entity/: mod.rs  screen_results.rs
src/: api.rs  app.rs  config.rs  main.rs  ui.rs
src/app/: response_window.rs  settings_window.rs
